adding a score activity and storing scores in shared preferences

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_game">GameActivity</string>
     <string name="title_activity_game_over">GameOverActivity</string>
     <string name="title_activity_multiplayer">Multiplayer</string>
+    <string name="title_activity_scores">ScoresActivity</string>
 </resources>
